[package]
name = "vc-notf"
version = "0.1.0"
authors = ["Kaoru Chisen <cordx56@cordx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.11.0", features = ["full"] }
serenity = { version = "0.10", features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "rustls_backend", "unstable_discord_api"] }
